--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "bun --hot src/server.ts "
   },
   "devDependencies": {
+    "@types/express": "^4.17.18",
     "bun-types": "latest"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
