--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@types/uuid": "^9.0.4",
+    "express": "^4.18.2",
+    "uuid": "^9.0.1"
   }
 }
