--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@types/pg": "^8.10.3",
     "@types/uuid": "^9.0.4",
     "express": "^4.18.2",
+    "express-async-error": "^0.0.2",
+    "pg": "^8.11.3",
     "uuid": "^9.0.1"
   }
 }
