--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "module": "src/server.ts",
   "type": "module",
   "scripts": {
-    "dev": "bun --hot src/server.ts "
+    "start": "bun src/server.ts",
+    "dev": "bun --hot src/server.ts ",
+    "test": "bun test",
+    "test:dev": "bun test --watch"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
